--- a/settings.gradle
+++ b/settings.gradle
@@ -1,14 +1,8 @@
 rootProject.name = "features"
-include 'features'
-include 'features:jooq'
-findProject(':features:jooq')?.name = 'jooq'
-include 'features:logback'
-findProject(':features:logback')?.name = 'logback'
-include 'features:properties'
-findProject(':features:properties')?.name = 'properties'
-include 'features:graphlike'
-findProject(':features:graphlike')?.name = 'graphlike'
-include 'features:redis'
-findProject(':features:redis')?.name = 'redis'
-include 'features:template'
-findProject(':features:template')?.name = 'template'
+
+include ':jooq'
+include ':logback'
+include ':properties'
+include ':graphlike'
+include ':redis'
+include ':template'
