--- a/build.gradle
+++ b/build.gradle
@@ -1,56 +1,35 @@
-buildscript {
-    repositories {
-        maven { url 'https://maven.aliyun.com/repository/public' }
-        maven { url 'https://maven.aliyun.com/repository/jcenter' }
-        maven { url 'https://maven.aliyun.com/repository/google' }
-        maven { url 'https://maven.aliyun.com/repository/central' }
-        maven { url 'https://maven.aliyun.com/repository/gradle-plugin' }
-        maven { url 'https://maven.aliyun.com/repository/spring' }
-        maven { url 'https://maven.aliyun.com/repository/spring-plugin' }
-        maven { url 'http://maven.aliyun.com/nexus/content/repositories/jcenter/' }
-        maven { url 'http://maven.aliyun.com/nexus/content/groups/public/' }
-        maven { url 'https://jitpack.io' }
-        maven { url 'https://maven.google.com' }
-        maven { url 'https://plugins.gradle.org/m2/' }
-        mavenLocal()
-        jcenter()
-        mavenCentral()
-    }
-    dependencies {
-        classpath("org.jetbrains.kotlin:kotlin-gradle-plugin:${kotlin_version}")
-        classpath("org.jetbrains.kotlin:kotlin-allopen:${kotlin_version}")
-        classpath 'nu.studer:gradle-jooq-plugin:3.0.2'
-        classpath "gradle.plugin.com.boxfuse.client:gradle-plugin-publishing:5.1.4"
-        //classpath "org.postgresql:postgresql:$postgresVersion"
-    }
-}
-
 plugins {
-    // id 'java'
-    // id 'org.jetbrains.kotlin.jvm' version '1.3.21'
-    // id "org.jetbrains.kotlin.plugin.allopen"
-    id 'application'
-    id 'com.github.johnrengelman.shadow' version '2.0.4'
+    id 'org.jetbrains.kotlin.jvm' version '1.3.21'
 }
-mainClassName = 'io.ktor.server.netty.EngineMain'
-shadowJar {
-    manifest {
-        attributes 'Main-Class': mainClassName
-    }
-}
-dependencies {
-
-
-
-    testImplementation "io.ktor:ktor-server-test-host:$ktor_version"
-
-}
-
 
 allprojects {
     apply plugin: 'java'
     apply plugin: 'kotlin'
     apply plugin: 'maven'
+
+    task sourcesJar(type: Jar, dependsOn: classes) {
+        classifier = 'sources'
+        from sourceSets.main.allSource
+    }
+
+    task javadocJar(type: Jar, dependsOn: javadoc) {
+        classifier = 'javadoc'
+        from javadoc.destinationDir
+    }
+
+    artifacts {
+        archives sourcesJar
+        archives javadocJar
+    }
+
+    compileKotlin {
+        kotlinOptions.jvmTarget = "1.8"
+    }
+    compileTestKotlin {
+        kotlinOptions.jvmTarget = "1.8"
+    }
+    sourceCompatibility = 1.8
+    targetCompatibility = 1.8
     group 'cn.zenliu.ktor.features'
     version module_version
     repositories {
@@ -88,7 +67,7 @@ allprojects {
 
 
     }
-    task createPom {
+   /* task createPom {
         pom {
             project {
                 groupId this.group
@@ -104,11 +83,6 @@ allprojects {
             from("$project.buildDir/pom.xml")
             rename ".*", "pom.xml"
         }
-    }
-    compileKotlin {
-        kotlinOptions.jvmTarget = "1.8"
-    }
-    compileTestKotlin {
-        kotlinOptions.jvmTarget = "1.8"
-    }
+    }*/
+
 }
