--- a/eventbus/build.gradle
+++ b/eventbus/build.gradle
@@ -1,9 +1,7 @@
 dependencies {
     implementation project(":template")
     implementation project(":properties")
-    compileOnly "io.ktor:ktor-auth:$ktor_version"
+    implementation "io.projectreactor:reactor-core:$reactor_version"
     compileOnly "io.ktor:ktor-server-core:$ktor_version"
-
-  
 
 }
