--- a/gradle.properties
+++ b/gradle.properties
@@ -7,7 +7,7 @@ jackson_version=2.9.8
 jooq_version=3.11.10
 hikariCP_version=3.3.0
 lettuce_version=5.1.4.RELEASE
-
+reactor_version=3.2.6.RELEASE
 junit_version=5.3.0
 
 module_version=0.0.1
