--- a/properties/build.gradle
+++ b/properties/build.gradle
@@ -1,4 +1,4 @@
 dependencies {
-    compileOnly "io.github.config4k:config4k:$config4k_version"
+    implementation "io.github.config4k:config4k:$config4k_version"
     compileOnly "io.ktor:ktor-server-core:$ktor_version"
 }
