--- a/redis/build.gradle
+++ b/redis/build.gradle
@@ -3,5 +3,5 @@ dependencies {
     implementation project(":properties")
     compileOnly "io.ktor:ktor-server-core:$ktor_version"
     compileOnly "com.fasterxml.jackson.core:jackson-databind:$jackson_version"
-    compileOnly  "io.lettuce:lettuce-core:$lettuce_version"
+    implementation  "io.lettuce:lettuce-core:$lettuce_version"
 }
