--- a/jooq/build.gradle
+++ b/jooq/build.gradle
@@ -2,6 +2,6 @@ dependencies {
     implementation project(":template")
     implementation project(":properties")
     compileOnly "io.ktor:ktor-server-core:$ktor_version"
-    implementation "org.jooq:jooq:$jooq_version"
-    implementation "com.zaxxer:HikariCP:$hikariCP_version"
+    compileOnly "org.jooq:jooq:$jooq_version"
+    compileOnly "com.zaxxer:HikariCP:$hikariCP_version"
 }
