remove aliyun mirror

--- a/build.gradle
+++ b/build.gradle
@@ -33,17 +33,17 @@ allprojects {
     group 'cn.zenliu.ktor.features'
     version module_version
     repositories {
-        maven { url 'https://maven.aliyun.com/repository/public' }
-        maven { url 'https://maven.aliyun.com/repository/jcenter' }
-        maven { url 'https://maven.aliyun.com/repository/google' }
-        maven { url 'https://maven.aliyun.com/repository/central' }
-        maven { url 'https://maven.aliyun.com/repository/gradle-plugin' }
-        maven { url 'https://maven.aliyun.com/repository/spring' }
-        maven { url 'https://maven.aliyun.com/repository/spring-plugin' }
-        maven { url 'http://maven.aliyun.com/nexus/content/repositories/jcenter/' }
-        maven { url 'http://maven.aliyun.com/nexus/content/groups/public/' }
-        maven { url 'https://maven.google.com' }
-        maven { url 'https://plugins.gradle.org/m2/' }
+//        maven { url 'https://maven.aliyun.com/repository/public' }
+//        maven { url 'https://maven.aliyun.com/repository/jcenter' }
+//        maven { url 'https://maven.aliyun.com/repository/google' }
+//        maven { url 'https://maven.aliyun.com/repository/central' }
+//        maven { url 'https://maven.aliyun.com/repository/gradle-plugin' }
+//        maven { url 'https://maven.aliyun.com/repository/spring' }
+//        maven { url 'https://maven.aliyun.com/repository/spring-plugin' }
+//        maven { url 'http://maven.aliyun.com/nexus/content/repositories/jcenter/' }
+//        maven { url 'http://maven.aliyun.com/nexus/content/groups/public/' }
+//        maven { url 'https://maven.google.com' }
+//        maven { url 'https://plugins.gradle.org/m2/' }
         mavenLocal()
         jcenter()
         mavenCentral()
