[logback] fix muilt appender-ref support

--- a/logback/src/test/resources/application.conf
+++ b/logback/src/test/resources/application.conf
@@ -25,7 +25,10 @@ logback {
     appender-ref = [STDOUT, rollingAppender]
   }
   loggers {
-    "ktor.application": {level = INFO}
+    "ktor.application": {
+      level = INFO
+      appender-ref = [STDOUT, rollingAppender]
+    }
     "org.jooq.Constants": {level = ERROR}
     "org.eclipse.jetty": {level = INFO}
     "io.netty": {level = INFO}
