--- a/logback/src/main/resources/example.conf
+++ b/logback/src/main/resources/example.conf
@@ -1,39 +1,45 @@
-# 日志打印配置
+
 logback {
-  appenders: {
-    STDOUT: {
-      class = "ch.qos.logback.core.ConsoleAppender"
-      encoder {
-        pattern.value = "%d{YYYY-MM-dd HH:mm:ss.SSS} %highlight(%-5level) %green([%-4.30thread]) %blue(%logger{36}) %boldGreen(\\(%F:%line\\)) - %msg%n"
-      }
-    }
-    rollingAppender: {
-      class = "ch.qos.logback.core.rolling.RollingFileAppender"
-      file = "log/system.log"
-      rollingPolicy {
-        class = "ch.qos.logback.core.rolling.TimeBasedRollingPolicy"
-        FileNamePattern.value = "log/system_%d{yyyy-MM-dd}_log.zip"
-        maxHistory.value = "30"
-      }
-      encoder {
-        pattern.value = "%d{YYYY-MM-dd HH:mm:ss.SSS} %-4relative [%thread] %-5level %logger{35} - %msg%n"
-      }
-    }
+  debug: true
+  autoReload {
+    disabled: false
+    duration: 30s #minimal: 1s default: 60s
   }
-  root {
-    level = INFO
-    appender-ref = [STDOUT, rollingAppender]
-  }
-  loggers {
-    "ktor.application": {
-      level = INFO
-      appender-ref = [STDOUT, rollingAppender]
+  config {
+    debug = false
+    appenders {
+      CONSOLE {
+        class = "ch.qos.logback.core.ConsoleAppender"
+        encoder {
+          pattern.value = "%d{YYYY-MM-dd HH:mm:ss.SSS} %highlight(%-5level) %green([%-4.30thread]) %blue(%logger{36}) %boldGreen(\\(%F:%line\\)) - %msg%n"
+        }
+      }
+      ROLLFILE: {
+        class = "ch.qos.logback.core.rolling.RollingFileAppender"
+        file = "log/system.log"
+        rollingPolicy {
+          class = "ch.qos.logback.core.rolling.TimeBasedRollingPolicy"
+          FileNamePattern.value = "log/system_%d{yyyy-MM-dd}_log.zip"
+          maxHistory.value = "30"
+        }
+        encoder {
+          pattern.value = "%d{YYYY-MM-dd HH:mm:ss.SSS} %-4relative [%thread] %-5level %logger{35} - %msg%n"
+        }
+      }
     }
-    "org.jooq.Constants": {level = ERROR}
-    "org.eclipse.jetty": {level = INFO}
-    "io.netty": {level = INFO}
-    "io.lettuce.core": {level = INFO}
-    "com.zaxxer": {level = INFO}
-    "org.jooq": {level = INFO}
+    root {
+      level: info
+      ref: [CONSOLE,ROLLFILE]
+    }
+    loggers {
+      "ktor.application": {level = INFO}
+      "org.jooq.Constants": {level = ERROR}
+      "org.eclipse.jetty": {level = INFO}
+      "io.netty": {level = INFO}
+      "io.lettuce.core": {level = INFO}
+      "com.zaxxer": {level = INFO}
+      "org.jooq": {level = INFO}
+    }
   }
 }
+
