--- a/logback/src/test/resources/application.conf
+++ b/logback/src/test/resources/application.conf
@@ -1,24 +1,28 @@
 logback {
-  appenders: {
-    STDOUT: {
-      class = "ch.qos.logback.core.ConsoleAppender"
-      encoder {
-        pattern.value = "%d{YYYY-MM-dd HH:mm:ss.SSS} %highlight(%-5level) %green([%-4.30thread]) %blue(%logger{36}) %boldGreen(\\(%F:%line\\)) - %msg%n"
+  debug:true
+  config {
+    debug: false
+    appenders {
+      STDOUT {
+        class = "ch.qos.logback.core.ConsoleAppender"
+        encoder {
+          pattern.value = "%d{YYYY-MM-dd HH:mm:ss.SSS} %highlight(%-5level) %green([%-4.30thread]) %blue(%logger{36}) %boldGreen(\\(%F:%line\\)) - %msg%n"
+        }
       }
     }
-  }
-  root {
-    level = INFO
-    appender-ref = [STDOUT]
-  }
-  loggers {
-    "ktor.application": {
+    root {
       level = INFO
-      appender-ref = [STDOUT]
+      ref = [STDOUT]
     }
-    "test": {
-      level = ERROR
-      appender-ref=[STDOUT]
+    loggers {
+      "ktor.application": {
+        level = INFO
+        ref = [STDOUT]
+      }
+      "test": {
+        level = ERROR
+        ref = [STDOUT]
+      }
     }
   }
 }
