--- a/pom.xml
+++ b/pom.xml
@@ -21,11 +21,13 @@
         <ktor.version>1.2.5</ktor.version>
         <logback.version>1.2.3</logback.version>
         <config4k.version>0.4.1</config4k.version>
-        <jackson.version>2.9.10.1</jackson.version>
+        <jackson.version>2.10.1</jackson.version>
         <hikari.version>3.4.1</hikari.version>
         <lettuce.version>5.2.1.RELEASE</lettuce.version>
         <reactor.version>3.3.0.RELEASE</reactor.version>
         <reactor-kotlin.version>1.0.0.RELEASE</reactor-kotlin.version>
+
+        <kotlin.compiler.incremental>true</kotlin.compiler.incremental>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
     <repositories>
@@ -368,7 +370,7 @@
 <!--                            <arg>-Xcoroutines=enable</arg>-->
                         </args>
                          <compilerPlugins>
-                             <plugin>spring</plugin>
+                             <plugin>all-open</plugin>
                          </compilerPlugins>
                     </configuration>
                     <dependencies>
@@ -395,6 +397,23 @@
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-compiler-plugin</artifactId>
                 </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-source-plugin</artifactId>
+                    <executions>
+                        <execution>
+                            <id>attach-sources</id>
+                            <phase>package</phase>
+                            <goals>
+                                <goal>jar</goal>
+                            </goals>
+                            <configuration>
+                                <attach>true</attach>
+                                <forceCreation>true</forceCreation>
+                            </configuration>
+                        </execution>
+                    </executions>
+                </plugin>
             </plugins>
         </pluginManagement>
         <plugins>
@@ -409,6 +428,10 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-source-plugin</artifactId>
             </plugin>
         </plugins>
     </build>
