just test update

--- a/logback/src/test/resources/application.conf
+++ b/logback/src/test/resources/application.conf
@@ -3,25 +3,30 @@ logback {
   config {
     debug: false
     appenders {
-      STDOUT {
+      DEBUGER {
         class = "ch.qos.logback.core.ConsoleAppender"
         encoder {
           pattern.value = "%d{YYYY-MM-dd HH:mm:ss.SSS} %highlight(%-5level) %green([%-4.30thread]) %blue(%logger{36}) %boldGreen(\\(%F:%line\\)) - %msg%n"
         }
       }
+      CONSOLE {
+        class = "ch.qos.logback.core.ConsoleAppender"
+        encoder {
+          pattern.value = "%d{YYYY-MM-dd HH:mm:ss.SSS} %highlight(%-5level) %green([%-4.30thread]) %blue(%logger{36}) - %msg%n"
+        }
+      }
     }
     root {
       level = INFO
-      ref = [STDOUT]
+      ref = [DEBUGER]
     }
     loggers {
-      "ktor.application": {
+      "ktor.test": {
         level = INFO
-        ref = [STDOUT]
+        ref = [CONSOLE]
       }
       "test": {
         level = ERROR
-        ref = [STDOUT]
       }
     }
   }
