--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
         <module>ez-ebean</module>
         <module>logback</module>
         <module>ez-liquibase</module>
+        <module>ez-caffeine</module>
     </modules>
     <groupId>cn.zenliu.ktor</groupId>
     <artifactId>ktor-features</artifactId>
@@ -30,7 +31,7 @@
         <liquibase.version>3.8.1</liquibase.version>
         <jooq.version>3.12.1</jooq.version>
         <snakeyaml.version>1.12</snakeyaml.version>
-
+        <caffeine.version>2.8.0</caffeine.version>
 
         <kotlin.compiler.incremental>true</kotlin.compiler.incremental>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -47,6 +48,14 @@
     </repositories>
     <dependencyManagement>
         <dependencies>
+            <!-- caches -->
+
+            <dependency>
+                <groupId>com.github.ben-manes.caffeine</groupId>
+                <artifactId>caffeine</artifactId>
+                <version>${caffeine.version}</version>
+            </dependency>
+
             <!--            kt-->
             <dependency>
                 <groupId>org.jetbrains.kotlin</groupId>
