fix: ez-liquibase example fix: ez-caffeine inline

--- a/ez-liquibase/src/main/resources/example.conf
+++ b/ez-liquibase/src/main/resources/example.conf
@@ -8,7 +8,7 @@ datasource{
 }
 liquibase{
   autoStart=true
-  changeLog = "changelog-example.yml"
+  changeLog = "example/changelog-example.yml"
   other:[
     {
       datasource=mem2
