--- a/pom.xml
+++ b/pom.xml
@@ -12,14 +12,15 @@
         <module>logback</module>
         <module>ez-liquibase</module>
         <module>ez-caffeine</module>
+        <module>ez-kmongo</module>
     </modules>
     <groupId>cn.zenliu.ktor</groupId>
     <artifactId>ktor-features</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <properties>
         <java.version>1.8</java.version>
-        <kotlin.version>1.3.60</kotlin.version>
-        <ebean.version>12.1.3</ebean.version>
+        <kotlin.version>1.3.61</kotlin.version>
+        <ebean.version>12.1.9</ebean.version>
         <ktor.version>1.2.5</ktor.version>
         <logback.version>1.2.3</logback.version>
         <config4k.version>0.4.1</config4k.version>
@@ -32,7 +33,7 @@
         <jooq.version>3.12.1</jooq.version>
         <snakeyaml.version>1.12</snakeyaml.version>
         <caffeine.version>2.8.0</caffeine.version>
-
+        <kmongo.version>3.11.2</kmongo.version>
         <kotlin.compiler.incremental>true</kotlin.compiler.incremental>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
@@ -48,6 +49,12 @@
     </repositories>
     <dependencyManagement>
         <dependencies>
+            <!-- mongo -->
+            <dependency>
+                <groupId>org.litote.kmongo</groupId>
+                <artifactId>kmongo-coroutine</artifactId>
+                <version>${kmongo.version}</version>
+            </dependency>
             <!-- caches -->
 
             <dependency>
