--- a/ez-liquibase/src/main/resources/example.conf
+++ b/ez-liquibase/src/main/resources/example.conf
@@ -1,18 +1,18 @@
-datasource{
-  url: "jdbc:sqlite::memory:"
-  extra{
-    mem2:{
-      url: "jdbc:sqlite::memory:"
-    }
-  }
-}
-liquibase{
-  autoStart=true
-  changeLog = "example/changelog-example.yml"
-  other:[
-    {
-      datasource=mem2
-      changeLog = "changelog-example.yml"
-    }
-  ]
-}
+#datasource{
+#  url: "jdbc:sqlite::memory:"
+#  extra{
+#    mem2:{
+#      url: "jdbc:sqlite::memory:"
+#    }
+#  }
+#}
+#liquibase{
+#  autoStart=true
+#  changeLog = "example/changelog-example.yml"
+#  other:[
+#    {
+#      datasource=mem2
+#      changeLog = "changelog-example.yml"
+#    }
+#  ]
+#}
