--- a/ez-logback/pom.xml
+++ b/ez-logback/pom.xml
@@ -8,7 +8,7 @@
         <version>0.0.1-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>logback</artifactId>
+    <artifactId>ez-logback</artifactId>
     <dependencies>
         <dependency>
             <groupId>cn.zenliu.ktor</groupId>
