--- a/ez-redis/pom.xml
+++ b/ez-redis/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>redis</artifactId>
+    <artifactId>ez-redis</artifactId>
     <packaging>jar</packaging>
     <dependencies>
         <dependency>
